--- a/Blazor/BlazorTutorial/BlazorTutorial.App/_Imports.razor
+++ b/Blazor/BlazorTutorial/BlazorTutorial.App/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorTutorial.App
 @using BlazorTutorial.App.Shared
+@using BlazorTutorial.Model.Dto
+@using BlazorTutorial.Model.LearnBlazorModels
