--- a/Blazor/BlazorTutorial/BlazorTutorial.App/Shared/NavMenu.razor
+++ b/Blazor/BlazorTutorial/BlazorTutorial.App/Shared/NavMenu.razor
@@ -15,13 +15,33 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/learnBlazor/bindProp">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Bind Prop
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/learnBlazor/demoproduct">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Demo Product
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazor/parentComponent">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Parent/Child Relation
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazor/learnRouting">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Learn Routing
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazor/blazorJs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Blazor JS
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/learnBlazor/lifecycle">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> LifeCycle
             </NavLink>
         </div>
     </nav>
